# rustycat

./: Cargo.toml  README.md
src/: cli.rs  color.rs  config.rs  main.rs  web.rs
src/logcat/: filter.rs  mod.rs  parser.rs  process.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/widgets/: app_picker.rs  app_popup.rs  error_pane.rs  log_view.rs  mod.rs  search_bar.rs  status_bar.rs
static/: index.html
