[package]
name = "rustycat-android"
version = "0.1.1"
edition = "2021"
description = "A colorful Android logcat viewer with package filtering"
authors = ["Cesar Ferreira <cesar.manuel.ferreira@gmail.com>"]
license = "MIT"
repository = "https://github.com/cesarferreira/rustycat"
homepage = "https://github.com/cesarferreira/rustycat"
readme = "README.md"

[[bin]]
name = "rcat"
path = "src/main.rs"

[dependencies]
colored = "2.1.0"
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.3"
anyhow = "1.0.79"
termion = "2.0.1"
