[package]
name = "rustycat-android"
version = "0.3.0"
edition = "2021"
description = "A colorful Android logcat viewer with package filtering"
authors = ["Cesar Ferreira <cesar.manuel.ferreira@gmail.com>"]
license = "MIT"
repository = "https://github.com/cesarferreira/rustycat"
homepage = "https://github.com/cesarferreira/rustycat"
readme = "README.md"

[[bin]]
name = "rcat"
path = "src/main.rs"

[dependencies]
colored = "2.1.0"
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.3"
anyhow = "1.0.79"
termion = "2.0.1"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
futures = { version = "0.3.32", default-features = false, features = ["std"] }
